Fri May 23 10:46:50 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From Carsten Madsen <com@navicon.dk>
	* ace/TTY_IO.h (Serial_Params):

	  Added new "readmincharacters" member that denotes the minimum
	  number of characters for a non-canonical read.

	* ace/TTY_IO.cpp (control):

	  Take into account the new Serial_Params::readmincharacters value
	  so that serial line timeout configuration is no longer as
	  limited as it was prior to this change.  [Bug 1388]

Fri May 23 12:20:54 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* THANKS: Added Vincent Korkos to the hall of fame.

Fri May 23 11:43:10 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* bin/tao_orb_tests.lst: Added the OBV tests to our daily
	  builds. This is going to be one of the *most* important features
	  for CIAO and it is really sad that it is not being tested at
	  all! Ran into this when I was running some smoke tests and found
	  a surprise. No prizes  for getting it right! One of the tests
	  failed :(!

Fri May 23 10:38:13 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          If idlgendir is used, generate extra information in order to clean
          up the generated files.  Thanks to Andrey Nechypurenko
          <andrey.nechypurenko@siemens.com> for reporting this.

Fri May 23 14:46:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.i (ioctl):
          Cygwin has ioctl, so removed Cygwin specific that just returned
          a notsup.

Fri May 23 09:38:55 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/DependencyGenerator/DependencyGenerator.pm:

          Use case insensitve exclusion and remove double slashes and back
          slashes.

Fri May 23 09:18:32 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/nmake.mpd:

          Modify the depend target to call perl and pass it the depgen.pl