@@ -1705,6 +1705,7 @@ Peder Norgaard <pcn@pogt.dk>
 David Ohlemacher <ohlemacher@bbn.com>
 Ken Kane <kkane@livevault.com>
 Bill Church <wchurch@ara.com>
+Udo Berninger <udo.berninger@siemens.com>
 Vincent Korkos <vincent.korkos@fr.thalesgroup.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
