@@ -1008,15 +1008,6 @@ Wed May  7 22:49:05 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 Wed May 07 22:32:49 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
-<<<<<<< ChangeLog
-	* tao/Connection_Handler.cpp (svc_i): Incremented the refcount of
-	  the connection handler before calling the handle_input_i () on
-	  the transport. The pattern should be the same as that in
-	  TAO_Connection_Handler::handle_input_eh (), where the transport
-	  is updated and the refcount on the handler is incremented. This
-	  change should fix problems with servers crashing if remote peers
-	  dissappears under thread-per-connection strategy.
-=======
         * tao/Connection_Handler.cpp (svc_i): Incremented the refcount of
           the connection handler before calling the handle_input_i () on
           the transport. The pattern should be the same as that in
@@ -1024,7 +1015,6 @@ Wed May 07 22:32:49 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
           is updated and the refcount on the handler is incremented. This
           change should fix problems with servers crashing if remote peers
           dissappears under thread-per-connection strategy.
->>>>>>> 1.1798
 
           Thanks to Ira Burton <imburton@micron.com> for reporting this
           problem.
